Fix update profile button alignment.

--- a/mezzit/static/css/mezzit.css
+++ b/mezzit/static/css/mezzit.css
@@ -76,3 +76,4 @@ fieldset {margin-top:20px;}
 .comment-links {padding-bottom:5px; border-bottom:1px solid #eee;}
 .comment-comment {margin-bottom:5px;}
 
+.btn-profile {margin-top:20px;}
